--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:/m5Rf1yRE0VlIGNxYDC33b+O37rT08yJXJYJquNVyLg=
-APP_DEBUG=false
-DEBUGBAR_ENABLED=false
+APP_DEBUG=true
+DEBUGBAR_ENABLED=true
 APP_URL=https://muamu.mazhub.com/
 
 LOG_CHANNEL=stack
@@ -12,9 +12,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=muamubaru
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u338591213_muamu2
+DB_USERNAME=u338591213_muamu2
+DB_PASSWORD=Pantek2412!
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
